test_programs/compile_failure/dup_trait_items_2/src/main.nr
trait MyTrait {
  let SomeConst: u32;
  let SomeConst: field;
}

fn main() {}
